v0.4.0/_sources/gallery/histograms/rose.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/histograms/rose.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_histograms_rose.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_histograms_rose.py:


Rose diagram
------------

The :meth:`pygmt.Figure.rose` method can plot windrose diagrams or polar histograms.

.. GENERATED FROM PYTHON SOURCE LINES 7-45



.. image:: /gallery/histograms/images/sphx_glr_rose_001.png
    :alt: rose
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default


    import pygmt

    # Load sample compilation of fracture lengths and azimuth as
    # hypothetically digitized from geological maps
    data = pygmt.datasets.load_fractures_compilation()

    fig = pygmt.Figure()

    fig.rose(
        # use columns of the sample dataset as input for the length and azimuth
        # parameters
        length=data.length,
        azimuth=data.azimuth,
        # specify the "region" of interest in the (r,azimuth) space [r0, r1, az0, az1],
        # here, r0 is 0 and r1 is 1, for azimuth, az0 is 0 and az1 is 360 which means
        # we plot a full circle between 0 and 360 degrees
        region=[0, 1, 0, 360],
        # set the diameter of the rose diagram to 7.5 cm
        diameter="7.5c",
        # define the sector width in degrees, we append +r here to draw a rose
        # diagram instead of a sector diagram
        sector="10+r",
        # normalize bin counts by the largest value so all bin counts range from
        # 0 to 1
        norm=True,
        # use red3 as color fill for the sectors
        color="red3",
        # define the frame with ticks and gridlines every 0.2
        # length unit in radial direction and every 30 degrees
        # in azimuthal direction, set background color to
        # lightgray
        frame=["x0.2g0.2", "y30g30", "+glightgray"],
        # use a pen size of 1p to draw the outlines
        pen="1p",
    )

    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  0.988 seconds)


.. _sphx_glr_download_gallery_histograms_rose.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: rose.py <rose.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: rose.ipynb <rose.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
